compiler/src/test/resources/amyc/nameAnalyzer/failing/UndefinedVariable.amy
module Undefined
  fn foo(): Int = { i + 1 }
end Undefined
